load cars to table

--- a/web/index.html
+++ b/web/index.html
@@ -2137,7 +2137,7 @@
 
             <div style="width: 98vw; height: 70vh;position: relative; top: 90px;right: 0;bottom: 0;left: 0;margin: auto" class="table-responsive text-nowrap">
 
-                <table class="table align-middle mb-0 bg-white table table-responsive table-bordered table-hover w-auto" style="position: relative;left: 243px;top: 44px;">
+                <table id="tblCars" class="table align-middle mb-0 bg-white table table-responsive table-bordered table-hover w-auto" style="position: relative;left: 243px;top: 44px;">
                     <thead class="bg-light">
                     <tr>
                         <th>Car Id</th>
@@ -2165,240 +2165,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        <td>
-                            C00-0001
-                        </td>
-                        <td>
-                            Susuki
-                        </td>
-                        <td>
-                            White
-                        </td>
-                        <td>
-                            General
-                        </td>
-                        <td>
-                            R00-CVD25896
-                        </td>
-                        <td>
-                            Petrol
-                        </td>
-                        <td>
-                            Manual
-                        </td>
-                        <td>
-                            1000
-                        </td>
-                        <td>
-                            10000
-                        </td>
-                        <td>
-                            2
-                        </td>
-                        <td>
-                            5
-                        </td>
-                        <td>
-                            1000
-                        </td>
-                        <td>
-                            <span class="badge badge-success rounded-pill d-inline">Available</span>
-                        </td>
-                        <td>
-                            <span class="badge badge-success rounded-pill d-inline">Not Damage</span>
-                        </td>
-                        <td>
-                            <span class="badge badge-success rounded-pill d-inline">Maintained</span>
-                        </td>
-                        <td>0</td>
-                        <td>
-                            <div class="d-flex align-items-center">
-                                <img src="https://mdbootstrap.com/img/new/avatars/8.jpg" alt="" style="width: 45px; height: 45px" class="rounded-circle"/>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="d-flex align-items-center">
-                                <img src="https://mdbootstrap.com/img/new/avatars/8.jpg" alt="" style="width: 45px; height: 45px" class="rounded-circle"/>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="d-flex align-items-center">
-                                <img src="https://mdbootstrap.com/img/new/avatars/8.jpg" alt="" style="width: 45px; height: 45px" class="rounded-circle"/>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="d-flex align-items-center">
-                                <img src="https://mdbootstrap.com/img/new/avatars/8.jpg" alt="" style="width: 45px; height: 45px" class="rounded-circle"/>
-                            </div>
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-warning btn-sm px-3" data-ripple-color="dark">
-                                <i class="fas fa-pen-alt"></i>
-                            </button>
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-danger btn-sm px-3" data-ripple-color="dark">
-                                <i class="fas fa-times"></i>
-                            </button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            C00-0001
-                        </td>
-                        <td>
-                            Susuki
-                        </td>
-                        <td>
-                            White
-                        </td>
-                        <td>
-                            General
-                        </td>
-                        <td>
-                            R00-CVD25896
-                        </td>
-                        <td>
-                            Petrol
-                        </td>
-                        <td>
-                            Manual
-                        </td>
-                        <td>
-                            1000
-                        </td>
-                        <td>
-                            10000
-                        </td>
-                        <td>
-                            2
-                        </td>
-                        <td>
-                            5
-                        </td>
-                        <td>
-                            1000
-                        </td>
-                        <td>
-                            <span class="badge badge-success rounded-pill d-inline">Available</span>
-                        </td>
-                        <td>
-                            <span class="badge badge-success rounded-pill d-inline">Not Damage</span>
-                        </td>
-                        <td>
-                            <span class="badge badge-success rounded-pill d-inline">Maintained</span>
-                        </td>
-                        <td>0</td>
-                        <td>
-                            <div class="d-flex align-items-center">
-                                <img src="https://mdbootstrap.com/img/new/avatars/8.jpg" alt="" style="width: 45px; height: 45px" class="rounded-circle"/>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="d-flex align-items-center">
-                                <img src="https://mdbootstrap.com/img/new/avatars/8.jpg" alt="" style="width: 45px; height: 45px" class="rounded-circle"/>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="d-flex align-items-center">
-                                <img src="https://mdbootstrap.com/img/new/avatars/8.jpg" alt="" style="width: 45px; height: 45px" class="rounded-circle"/>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="d-flex align-items-center">
-                                <img src="https://mdbootstrap.com/img/new/avatars/8.jpg" alt="" style="width: 45px; height: 45px" class="rounded-circle"/>
-                            </div>
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-warning btn-sm px-3" data-ripple-color="dark">
-                                <i class="fas fa-pen-alt"></i>
-                            </button>
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-danger btn-sm px-3" data-ripple-color="dark">
-                                <i class="fas fa-times"></i>
-                            </button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            C00-0001
-                        </td>
-                        <td>
-                            Susuki
-                        </td>
-                        <td>
-                            White
-                        </td>
-                        <td>
-                            General
-                        </td>
-                        <td>
-                            R00-CVD25896
-                        </td>
-                        <td>
-                            Petrol
-                        </td>
-                        <td>
-                            Manual
-                        </td>
-                        <td>
-                            1000
-                        </td>
-                        <td>
-                            10000
-                        </td>
-                        <td>
-                            2
-                        </td>
-                        <td>
-                            5
-                        </td>
-                        <td>
-                            1000
-                        </td>
-                        <td>
-                            <span class="badge badge-success rounded-pill d-inline">Available</span>
-                        </td>
-                        <td>
-                            <span class="badge badge-success rounded-pill d-inline">Not Damage</span>
-                        </td>
-                        <td>
-                            <span class="badge badge-success rounded-pill d-inline">Maintained</span>
-                        </td>
-                        <td>0</td>
-                        <td>
-                            <div class="d-flex align-items-center">
-                                <img src="https://mdbootstrap.com/img/new/avatars/8.jpg" alt="" style="width: 45px; height: 45px" class="rounded-circle"/>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="d-flex align-items-center">
-                                <img src="https://mdbootstrap.com/img/new/avatars/8.jpg" alt="" style="width: 45px; height: 45px" class="rounded-circle"/>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="d-flex align-items-center">
-                                <img src="https://mdbootstrap.com/img/new/avatars/8.jpg" alt="" style="width: 45px; height: 45px" class="rounded-circle"/>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="d-flex align-items-center">
-                                <img src="https://mdbootstrap.com/img/new/avatars/8.jpg" alt="" style="width: 45px; height: 45px" class="rounded-circle"/>
-                            </div>
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-warning btn-sm px-3" data-ripple-color="dark">
-                                <i class="fas fa-pen-alt"></i>
-                            </button>
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-danger btn-sm px-3" data-ripple-color="dark">
-                                <i class="fas fa-times"></i>
-                            </button>
-                        </td>
-                    </tr>
+
                     </tbody>
                 </table>
 
@@ -2411,7 +2178,7 @@
     <!--Add New Car Page-->
     <section id="CarManagePage">
 
-        <div class="w-75 border border-3 border-white rounded-1 shadow bg-white" style="position: relative;top: 70px;bottom: 0;right: 0;left: 50px;margin: auto;height: 630px;">
+        <div class="w-75 border border-3 border-white rounded-1 shadow bg-white" style="position: relative;top: 64px;bottom: 0;right: 0;left: 50px;margin: auto;height: 635px;">
 
             <div class="text-center  border-bottom border-2 " style="position: relative;top: 20px;">
                 <h1 class="mt-1 text-dark fw-bold fst-italic mb-0 " style="font-family: 'PT Serif', serif;">- MANAGE CAR -</h1>
