--- a/web/index.html
+++ b/web/index.html
@@ -309,17 +309,19 @@
                 <div class="form-outline mb-4 ms-5 me-5">
                     <input type="password" id="newpassword" class="form-control  border border-2 border-white bg-light" />
                     <label class="form-label text-black fw-light" for="newpassword" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px">New password</label>
+                    <p><small id="errorNewPW" class="text-danger fs-5 pl-1 mt-0 mb-0"></small></p>
                 </div>
 
                 <!-- Password input -->
                 <div class="form-outline mb-4 ms-5 me-5">
                     <input type="password" id="confirmpassword" class="form-control  border border-2 border-white bg-light" />
                     <label class="form-label text-black fw-light" for="confirmpassword" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px">Confirm password</label>
+                    <p><small id="errorConfirmPW" class="text-danger fs-5 pl-1 mt-0 mb-0"></small></p>
                 </div>
 
                 <div class="mb-5  me-5 ms-5">
                     <!-- Submit button -->
-                    <button type="button" class="btn btn-block text-center text-white btn-warning shadow btnReset" style="display: inline;position: relative;left: 0;right: 0; margin: auto;">Reset</button>
+                    <button id="btnResetPW" type="button" class="btn btn-block text-center text-white btn-warning shadow" style="display: inline;position: relative;left: 0;right: 0; margin: auto;">Reset</button>
                 </div>
 
                 <hr class="divider-horizontal-blurry" />
@@ -4285,6 +4287,7 @@
 <script src="controllers/LoginController.js"></script>
 <script src="controllers/CarController.js"></script>
 <script src="controllers/DriverController.js"></script>
+<script src="controllers/ForgotPasswordController.js"></script>
 
 <!--for time picker-->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
