--- a/web/index.html
+++ b/web/index.html
@@ -527,6 +527,7 @@
                         <div class="input-group date" style="width: 250px">
                             <input type="text" id="pickUpDateEdit" class="form-control" placeholder="Pickup date">
                             <span class="input-group-addon bg-dark"><i class="glyphicon glyphicon-calendar text-white"></i></span>
+                            <p><small id="errorPickupDateAgain" class="text-white fs-5 pl-1 mt-0 mb-0"></small></p>
                         </div>
                     </div>
                 </div>
@@ -536,6 +537,7 @@
                         <label class="form-label text-black" for="pickUpTimeEdit"  style="font-size: 15px">At what time will I pickup you</label>
                         <div style="position: relative;width: 250px" >
                             <input class="form-control" type="text" id="pickUpTimeEdit" placeholder="Pickup time"/>
+                            <p><small id="errorPickupTimeAgain" class="text-white fs-5 pl-1 mt-0 mb-0"></small></p>
                         </div>
                     </div>
                 </div>
@@ -546,6 +548,7 @@
                         <div class="input-group date" style="width: 250px">
                             <input type="text" id="returnDateEdit" class="form-control" placeholder="Return date">
                             <span class="input-group-addon bg-dark"><i class="glyphicon glyphicon-calendar text-white"></i></span>
+                            <p><small id="errorDropDateAgain" class="text-white fs-5 pl-1 mt-0 mb-0"></small></p>
                         </div>
                     </div>
                 </div>
@@ -555,6 +558,7 @@
                         <label class="form-label text-black" for="returnTimeEdit"  style="font-size: 15px">At what time will I drop you off</label>
                         <div style="position: relative;width: 250px" >
                             <input class="form-control" type="text" id="returnTimeEdit" placeholder="Return time"/>
+                            <p><small id="errorDroTimeAgain" class="text-white fs-5 pl-1 mt-0 mb-0"></small></p>
                         </div>
                     </div>
                 </div>
@@ -567,6 +571,7 @@
                     <label class="form-label text-black" for="pickUpLocationEdit">Where I pick you</label>
                     <div class="form-outline " style="position: relative;width: 250px">
                         <input type="text" id="pickUpLocationEdit" class="form-control" placeholder="Your pickup location"/>
+                        <p><small id="errorPickupLocationAgain" class="text-white fs-5 pl-1 mt-0 mb-0"></small></p>
                     </div>
                 </div>
 
@@ -574,6 +579,7 @@
                     <label class="form-label text-black" for="returnLocationEdit">Where I drop you</label>
                     <div class="form-outline" style="position: relative;width: 250px">
                         <input type="text" id="returnLocationEdit" class="form-control" placeholder="Your drop-off location"/>
+                        <p><small id="errorDropLocationAgain" class="text-white fs-5 pl-1 mt-0 mb-0"></small></p>
                     </div>
                 </div>
 
@@ -581,6 +587,7 @@
                     <label class="form-label text-black" for="destinationEdit">Where you go</label>
                     <div class="form-outline" style="position: relative;width: 250px">
                         <input type="text" id="destinationEdit" class="form-control" placeholder="Your destination"/>
+                        <p><small id="errorDestinationAgain" class="text-white fs-5 pl-1 mt-0 mb-0"></small></p>
                     </div>
                 </div>
 
@@ -588,6 +595,7 @@
                     <label class="form-label text-black" for="durationEdit">How far</label>
                     <div class="form-outline" style="position: relative;width: 250px">
                         <input type="text" id="durationEdit" class="form-control" placeholder="Journey duration"/>
+                        <p><small id="errorDurationAgain" class="text-white fs-5 pl-1 mt-0 mb-0"></small></p>
                     </div>
                 </div>
 
@@ -595,7 +603,7 @@
 
             <div class="row mt-5 ">
                 <div class="text-center">
-                    <button type="button" class="btn btn-info btn-rounded w-25">EDIT</button>
+                    <button id="editRentData" type="button" class="btn btn-info btn-rounded w-25">EDIT</button>
                 </div>
             </div>
 
@@ -4288,6 +4296,7 @@
 <script src="controllers/CarController.js"></script>
 <script src="controllers/DriverController.js"></script>
 <script src="controllers/ForgotPasswordController.js"></script>
+<script src="controllers/SelectCarsController.js"></script>
 
 <!--for time picker-->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
