--- a/web/index.html
+++ b/web/index.html
@@ -2692,7 +2692,7 @@
 
             <div style="width: 98vw; height: 70vh;position: relative; top: 67px;right: 0;bottom: 0;left: 0;margin: auto"  class="table-responsive text-nowrap">
 
-                <table class="table align-middle mb-0 bg-white table table-hover table-bordered" style="position: relative;left: 243px;top: 44px;">
+                <table id="tblReserve" class="table align-middle mb-0 bg-white table table-hover table-bordered" style="position: relative;left: 243px;top: 44px;">
                     <thead class="bg-light">
                     <tr>
                         <th>Reserve Date</th>
@@ -2712,144 +2712,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        <td>
-                            2022-12-21
-                        </td>
-                        <td>
-                            R00-0001
-                        </td>
-                        <td>
-                            Cus00-0001
-                        </td>
-                        <td>
-                            2022-12-21
-                        </td>
-                        <td>
-                            10.23
-                        </td>
-                        <td>
-                            Galle
-                        </td>
-                        <td>
-                            2022-12-21
-                        </td>
-                        <td>
-                            14.03
-                        </td>
-                        <td>
-                            Galle
-                        </td>
-                        <td>
-                            Anuradapura
-                        </td>
-                        <td>
-                            12
-                        </td>
-                        <td>
-                            <span class="badge badge-success rounded-pill d-inline">Want</span>
-                        </td>
-                        <td>
-                            <span class="badge badge-success rounded-pill d-inline">Accept</span>
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-info btn-sm px-3" data-ripple-color="dark">
-                                <i class="fas fa-eye"></i>
-                            </button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            2022-12-21
-                        </td>
-                        <td>
-                            R00-0001
-                        </td>
-                        <td>
-                            Cus00-0001
-                        </td>
-                        <td>
-                            2022-12-21
-                        </td>
-                        <td>
-                            10.23
-                        </td>
-                        <td>
-                            Galle
-                        </td>
-                        <td>
-                            2022-12-21
-                        </td>
-                        <td>
-                            14.03
-                        </td>
-                        <td>
-                            Galle
-                        </td>
-                        <td>
-                            Anuradapura
-                        </td>
-                        <td>
-                            12
-                        </td>
-                        <td>
-                            <span class="badge badge-success rounded-pill d-inline">Want</span>
-                        </td>
-                        <td>
-                            <span class="badge badge-success rounded-pill d-inline">Accept</span>
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-info btn-sm px-3" data-ripple-color="dark">
-                                <i class="fas fa-eye"></i>
-                            </button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            2022-12-21
-                        </td>
-                        <td>
-                            R00-0001
-                        </td>
-                        <td>
-                            Cus00-0001
-                        </td>
-                        <td>
-                            2022-12-21
-                        </td>
-                        <td>
-                            10.23
-                        </td>
-                        <td>
-                            Galle
-                        </td>
-                        <td>
-                            2022-12-21
-                        </td>
-                        <td>
-                            14.03
-                        </td>
-                        <td>
-                            Galle
-                        </td>
-                        <td>
-                            Anuradapura
-                        </td>
-                        <td>
-                            12
-                        </td>
-                        <td>
-                            <span class="badge badge-success rounded-pill d-inline">Want</span>
-                        </td>
-                        <td>
-                            <span class="badge badge-success rounded-pill d-inline">Accept</span>
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-info btn-sm px-3" data-ripple-color="dark">
-                                <i class="fas fa-eye"></i>
-                            </button>
-                        </td>
-                    </tr>
+
                     </tbody>
                 </table>
 
@@ -4297,6 +4160,9 @@
 <script src="controllers/DriverController.js"></script>
 <script src="controllers/ForgotPasswordController.js"></script>
 <script src="controllers/SelectCarsController.js"></script>
+<script src="controllers/ReserveController.js"></script>
+<script src="controllers/ScheduleController.js"></script>
+<script src="controllers/PaymentController.js"></script>
 
 <!--for time picker-->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
